[project]
name = "propy"
version = "0.1.0"
description = "Propy Bad Deed Validator - OCR deed parsing, LLM extraction, and rigorous validation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.42.0",
    "word2number>=1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]